--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8"/>
-		<title>Peluchin Jump</title>
+		<title>Stuffie Wishes</title>
 
 		<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width, user-scalable=no, minimal-ui">
 		<meta name="apple-mobile-web-app-capable" content="yes"/>
@@ -10,7 +10,6 @@
 		<meta name="screen-orientation" content="portrait"/>
 
 		<link rel="stylesheet" href="css/style.css">
-
 
 		<script src="https://connect.facebook.net/en_US/fbinstant.6.2.js"></script>
 		<script src="lib/phaser-facebook-instant-games.js"></script>
@@ -25,6 +24,5 @@
 		<script src="js/preloader.js"></script>
 		<script src="js/boot.js"></script>
 	</head>
-	<body>
-	</body>
+	<body style="background-color: #C8DDff;"></body>
 </html>
