--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
 		<meta name="full-screen" content="yes"/>
 		<meta name="screen-orientation" content="portrait"/>
 
-		<link rel="stylesheet" href="css/style.css">
+		<style type="text/css">
+            * {
+                padding: 0;
+                margin: 0;
+            }
+            canvas {
+                touch-action-delay: none;
+                touch-action: none;
+                -ms-touch-action: none;
+            }
+        </style>
 
 		<script src="https://connect.facebook.net/en_US/fbinstant.6.2.js"></script>
 		<script src="lib/phaser-facebook-instant-games.js"></script>
